# sistemadebarbearia

./: .env.example  .gitignore  CHANGELOG_MIGRACAO.md  LICENSE  netlify.toml  package-lock.json  package.json  vite.config.ts
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_fastapi_parity.py  0002_multi_tenant.py
backend/app/: main.py
backend/app/api/: appointments.py  auth.py  deps.py  profile.py  schedule.py  services.py  stats.py  uploads.py
backend/app/core/: config.py  rate_limiter.py  security.py  uuid_utils.py
backend/app/models/: __init__.py  appointment.py  audit_log.py  media_upload.py  professional_approval.py  profile.py  schedule.py  service.py  shop.py  store.py  user.py
backend/app/schemas/: appointment.py  auth.py  profile.py  schedule.py  service.py  shop.py  stats.py  store.py  upload.py  user.py
backend/app/services/: whatsapp.py
backend/tests/: test_auth_profile.py  test_multi_tenant.py  test_payments.py  test_register_flow.py  test_schedule.py
client/: requirements.md
client/src/: App.tsx  (+1 more)
docs/: ARQUITETURA.md  CONFIG_MANUAL_CLOUDINARY.md  CONFIG_MANUAL_NEON_SQL.md  CONFIG_MANUAL_NETLIFY.md  CONFIG_MANUAL_RENDER.md  DEPLOY_LOCAL.md  DEPLOY_NETLIFY.md  DEPLOY_RENDER_NETLIFY_NEON_CLOUDINARY.md  ENV_VARS.md  ENV_VARS_FINAL.md  FASE2_DIAGNOSTICO.md  FASE2_STATUS_FINAL.md  MIGRACAO.md  NEON_SQL_CONTINGENCIA.md  TESTE_MANUAL_E2E.md  TESTE_MANUAL_PASSO_A_PASSO.md
migrations/: 0002_phase2_luxe.sql
script/: build.ts
server/: auth.ts  routes.ts  seed.ts  storage.ts
shared/: routes.ts  schema.ts
(+21 files in other folders)
